test/basic/tpush_tpop_dynamic_validshape_invalid.pto
// RUN: not ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s

module {
  func.func @cube_kernel() attributes {pto.kernel_kind = #pto.kernel_kind<cube>} {
    %v2c_local = pto.reserve_buffer {
      name = "v2c_fifo",
      size = 4096,
      location = #pto.address_space<mat>,
      auto = true
    } -> i32
    %c2v_import = pto.import_reserved_buffer {
      name = "c2v_fifo",
      peer_func = @vector_kernel
    } -> i32
    pto.aic_initialize_pipe {dir_mask = 3, slot_size = 1024}
      (c2v_consumer_buf = %c2v_import : i32,
       v2c_consumer_buf = %v2c_local : i32)
    return
  }

  func.func @vector_kernel(%vr: index, %vc: index)
      attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
    %c2v_local = pto.reserve_buffer {
      name = "c2v_fifo",
      size = 4096,
      location = #pto.address_space<vec>,
      auto = true
    } -> i32
    %v2c_import = pto.import_reserved_buffer {
      name = "v2c_fifo",
      peer_func = @cube_kernel
    } -> i32
    pto.aiv_initialize_pipe {dir_mask = 3, slot_size = 1024}
      (c2v_consumer_buf = %c2v_local : i32,
       v2c_consumer_buf = %v2c_import : i32)

    %recv_tile = pto.tpop_from_aic(%vr, %vc) {split = 0}
      -> !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=64, v_row=16, v_col=64, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    pto.tfree_from_aic {split = 0}
    return
  }
}

// CHECK: error: 'pto.tpop_from_aic' op expects tile result to have dynamic validShape (?, ?) when valid_row/valid_col operands are provided
